2013-06-20 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Now text search match with
	custom fields of incident field.

2013-06-20  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php
	  operation/inventories/inventory_detail.php: Clean javascript.
	
	* include/js/integria_inventory.js: Added file.

2013-06-20 Dario Rodriguez <dario@artica.es>

	* include/js/integria_incident_search.js: Fixed and error with 
	pagination in parent incident dialog

2013-06-20 Dario Rodriguez <dario@artica.es>

	* operation/incidents_simple/incident.php: Fixed an error with JS
	code of "Add workunit" and "Add file" buttons of incident simple
	view.

2013-06-20 Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php,
	operation/incidents_simple/incident_new.php,
	include/js/integria_incident_search.js: Refactorized incident_limit
	function to be user in normal and simple mode incident view.

2013-06-20 Dario Rodriguez <dario@artica.es>

	* operation/inventories/inventory_incidents.php: Fixed a wrong
	link to incident view.
	* include/js/integria_incident_search.js: Removed a call to 
	configure_contact_buttons which is deprecated.

2013-06-20 Dario Rodriguez <dario@artica.es>

	*operation/inventories/inventory.php,
	operation/incidents/incident_notes.php,
	operation/incidents/incident_dashboard_detail.php,
	operation/incidents/incident_report.php,
	operation/incidents/incident.php: Recovered readMoreWU function 
	and moved to intetria_incident_search.js

2013-06-19 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: New ACLs implemented and moved to
	a new function called incidents_check_incident_acl.

2013-06-19 Dario Rodriguez <dario@artica.es>
	
	* godmode/setup/setup.php: Deleted flag to enable Incident reporters because
	this feature was removed.
	* include/js/integria_incident_search.js,
	operation/incidents/incident_detail.php,